--- a/scss/main.scss
+++ b/scss/main.scss
@@ -72,7 +72,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: url("../../img/felix-mooneeram-evlkOfkQ5rE-unsplash.jpg") no-repeat center center/cover;
+    background: url("../img/felix-mooneeram-evlkOfkQ5rE-unsplash.jpg") no-repeat center center/cover;
     height: 100vh;
     img {
     }
