--- a/scss/main.scss
+++ b/scss/main.scss
@@ -211,7 +211,7 @@
             }
             .fa-twitter-square {color: #1da1f2;}
             & i:hover {
-                scale: 1.1;
+                transform: scale(1.1);
             }
         }
     }
